Fixed product description to hide benefits list on iPhone SE size

--- a/index.css
+++ b/index.css
@@ -153,7 +153,7 @@ nav img {
   display: flex;
   max-height: 70%;
   overflow: hidden;
-  margin: 2rem;
+  margin: 1rem;
   box-sizing: border-box;
 }
 
@@ -188,6 +188,7 @@ nav img {
 #product-description {
     margin: 0 auto;
     max-width: 70%;
+    height: fit-content;
 }
 
 #product-description h2:hover, h3:hover, p:hover, li:hover {
@@ -259,8 +260,24 @@ nav img {
   #product-description p, ul, li {
     font-size: 0.9rem;
   }
+
+  #product-description {
+    overflow: scroll;
+  }
 }
 
+@media only screen and (max-width: 360px) {
+  #benefits-article {
+    display: none;
+  }
+}
+
+@media only screen and (max-height: 667px) {
+
+  #benefits-list {
+    display: none
+  }
+}
 /* Locations Section */
 
 #locations {
